--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "1405bfe9-a4a5-40cb-9fc4-3984e0d68e9d"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
